Setting-up the Cart and Cart items total

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h1 class="hero-heading">G-OveRated</h1>
           <p class="hero-sub-heading">Your Number 1 Gaming Store</p>
         </section>
-        <div class="body-cont grid">
+        <main class="body-cont grid">
           <!-- <div class="specials">
             <h2 class="specials__h2 center">specials</h2>
             <div class="special-cont">
@@ -141,7 +141,7 @@
             <button class="btn-specials-toggle">specials</button>
           </div> -->
 
-          <main class="games-container">
+          <section class="games-container">
             <h2 class="games__h2 center">Video Games</h2>
             <section class="games-cont grid">
               <figure class="game__figure">
@@ -359,16 +359,20 @@
               </figure>
             </section>
             <aside class="cart">
-              <h2 class="cart__h2 center">Your Cart</h2>
-              <div class="cart-cont"></div>
-              <div class="cart__total flex">
-                <p class="cart__total-items">Cart Item 2</p>
-                <p class="cart__total-price">Total 300</p>
+              <div class="cart-cont">
+                <h2 class="cart__h2 center">Your Cart</h2>
+                <div class="cart-details"></div>
+                <div class="cart__total flex">
+                  <p class="cart__total-items">
+                    Cart Items <span class="total-cart-items">0</span>
+                  </p>
+                  <p class="cart__total-price">Total 300</p>
+                </div>
+                <hr class="cart__items-divide" />
               </div>
-              <hr class="cart__items-divide" />
             </aside>
-          </main>
-        </div>
+          </section>
+        </main>
       </div>
       <footer class="footer">
         <h2>Footer</h2>
